# eldarverse-solutions

./: .gitignore
september-2025/: Cargo.toml  tasks.py
september-2025/benchmark/: Cargo.toml
september-2025/benchmark/benches/: criterion.rs
september-2025/common/src/: lib.rs
september-2025/problem-a/: Cargo.toml
september-2025/problem-a/src/: lib.rs  main.rs
september-2025/problem-b/: Cargo.toml  output.txt
september-2025/problem-b/src/: input.txt  lib.rs  main.rs
september-2025/problem-c/: Cargo.toml  output.txt
september-2025/problem-c/src/: input.txt  lib.rs  main.rs  sample_input.txt
september-2025/problem-d/: Cargo.toml  output.txt
september-2025/problem-d/src/: input.txt  lib.rs  main.rs  sample_input.txt
september-2025/problem-e/: Cargo.toml  output.txt
september-2025/problem-e/src/: input.txt  lib.rs  main.rs
september-2025/problem-f/: Cargo.toml  output.txt
september-2025/problem-f/src/: input.txt  lib.rs  main.rs  sample_input.txt
september-2025/problem-g/: Cargo.toml  output.txt
september-2025/problem-g/src/: input.txt  lib.rs  main.rs
september-2025/problem-h/: Cargo.toml  output.txt  proto.py
september-2025/problem-h/src/: input.txt  lib.rs  main.rs  sample_input.txt
september-2025/problem-i/: Cargo.toml  output.txt
september-2025/problem-i/src/: input.txt  lib.rs  main.rs  sample_input.txt
september-2025/problem-k/: Cargo.toml  output.txt
september-2025/problem-k/src/: input.txt  lib.rs  main.rs  sample_input.txt
september-2025/problem-l/: Cargo.toml  gen_sample_input.py  output.txt  plot.py  proto.py  prototype.py
september-2025/problem-l/src/: input.txt  lib.rs  main.rs  sample_input.txt
september-2025/problem-m/: Cargo.toml  output.txt
september-2025/problem-m/src/: input.txt  lib.rs  main.rs
