[workspace]
resolver = "3"
members = ["benchmark", "common", "problem-a", "problem-b", "problem-c", "problem-e", "problem-g", "problem-i", "problem-d", "problem-f", "problem-k", "problem-l", "problem-m", "problem-h"]

[profile.release]
debug = true

[workspace.metadata.problem-b]
start_time = 2025-09-05T16:28:17.527055
completion_time = 2025-09-05T17:13:53.229621

[workspace.metadata.problem-c]
start_time = 2025-09-05T18:35:14.314681
completion_time = 2025-09-05T18:41:14.590066

[workspace.metadata.problem-e]
start_time = 2025-09-05T18:46:44.083838
completion_time = 2025-09-05T18:56:45.936139

[workspace.metadata.problem-g]
start_time = 2025-09-05T19:00:11.649043
completion_time = 2025-09-05T21:52:45.200666

[workspace.metadata.problem-i]
start_time = 2025-09-05T21:57:40.185871
completion_time = 2025-09-05T22:32:27.311555

[workspace.metadata.problem-d]
start_time = 2025-09-06T00:50:46.518054
completion_time = 2025-09-06T01:54:08.257044

[workspace.metadata.problem-f]
start_time = 2025-09-06T14:23:34.632376

[workspace.metadata.problem-k]
start_time = 2025-09-06T15:29:36.898075
completion_time = 2025-09-06T16:52:56.229078

[workspace.metadata.problem-l]
start_time = 2025-09-06T17:03:00.288039
completion_time = 2025-09-10T01:24:59.587314

[workspace.metadata.problem-m]
start_time = 2025-09-10T01:25:21.262406
completion_time = 2025-09-10T01:41:37.709205

[workspace.metadata.problem-h]
start_time = 2025-09-10T14:18:52.316277
