[package]
name = "benchmark"
version = "1.0.0"
edition = "2024"

[dependencies]
problem-a = { path = "../problem-a" }
problem-b = { version = "0.1.0", path = "../problem-b" }
problem-c = { version = "0.1.0", path = "../problem-c" }
problem-d = { version = "0.1.0", path = "../problem-d" }
problem-e = { version = "0.1.0", path = "../problem-e" }
problem-f = { version = "0.1.0", path = "../problem-f" }
problem-g = { version = "0.1.0", path = "../problem-g" }
problem-h = { version = "0.1.0", path = "../problem-h" }
problem-i = { version = "0.1.0", path = "../problem-i" }
problem-k = { version = "0.1.0", path = "../problem-k" }
problem-l = { version = "0.1.0", path = "../problem-l" }
problem-m = { version = "0.1.0", path = "../problem-m" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false

[lib]
bench = false
